# neutron-manager

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
nmanage/: asgi.py  context_processors.py  middleware.py  urls.py  wsgi.py
nmanage/resources/: admin.py  apps.py  forms.py  models.py  tasks.py  views.py
nmanage/resources/migrations/: 0001_initial.py  0002_permission.py  0003_awsaccount_resource_account.py  0004_resource_endpoint_resource_region.py  0005_remove_resource_account_remove_resource_endpoint_and_more.py  0006_region_resource_region.py  0007_alter_region_name_alter_resource_name.py  0008_alter_region_name_alter_region_region.py  0009_hostedzone_resource_zone.py  0010_resource_zone_update.py  0011_resource_last_zone_ip.py  0012_powerschedule.py  0013_resource_disable_power_schedule.py  0014_powerschedule_last_executed.py  0015_alter_permission_actions.py  0016_alter_hostedzone_account_alter_hostedzone_zone_id.py
nmanage/resources/templates/: nmanage_base.html
nmanage/resources/templates/resources/: edit_schedule.html  info.html  list.html  login.html  wait.html
nmanage/resources/templatetags/: rtags.py
nmanage/settings/: base.py  dev.py  prod.py
